syntax = "proto3";

package protobuf;

option go_package = "generated/pb";

// as schema for pagination
message Pagination {
  uint64 total_data = 1;
  uint64 current_page = 2;
  uint64 per_page = 3;
  uint64 total_pages = 4;
}
